Add podcast.xml file

--- a/feed.yaml
+++ b/feed.yaml
@@ -6,6 +6,7 @@ image: /images/artwork.jpg
 language: en-us
 category: Technology
 format: audio/mpeg
+link: https://j-koziel.github.io/podcast-test
 item:
   - title: EP01-What's Happening in 2023
     description: Ray Villalobos and Content Managers Natalie Pao and Simon St. Laurent discuss what 2023 holds for the future in technology.
@@ -14,19 +15,19 @@ item:
     duration: 00:00:36
     length: 576,324
   - title: EP02-What is Generative AI?
-    description:  Pinar Demirdag discusses the fundamentals of generative AI, its practical applications, and future developments as companies create AI strategies in 2023.
+    description: Pinar Demirdag discusses the fundamentals of generative AI, its practical applications, and future developments as companies create AI strategies in 2023.
     published: Thu, 19 Jan 2023 18:00:00 GMT
     file: /audio/TFIT02.mp3
     duration: 00:00:22
     length: 351,963
   - title: EP03-How Generative AI Will Change DevOps
-    description:  Jerome Hardaway explores how generative AI can revolutionize the software development process by increasing efficiency, automating repetitive tasks, and creating more sophisticated and innovative solutions.
+    description: Jerome Hardaway explores how generative AI can revolutionize the software development process by increasing efficiency, automating repetitive tasks, and creating more sophisticated and innovative solutions.
     published: Thu, 26 Jan 2023 18:00:00 GMT
     file: /audio/TFIT03.mp3
     duration: 00:00:19
     length: 305,488
   - title: EP04-Building Responsible AI Systems
-    description:   Ayodele Odubela, a Data Scientist, Machine Learning professional and AI Entrepreneur, discusses the ethical issues surrounding the rapid adoption of AI systems, including transparency, minimizing bias, ensuring fairness, and potential ramifications around privacy, security, and governance.
+    description: Ayodele Odubela, a Data Scientist, Machine Learning professional and AI Entrepreneur, discusses the ethical issues surrounding the rapid adoption of AI systems, including transparency, minimizing bias, ensuring fairness, and potential ramifications around privacy, security, and governance.
     published: Thu, 2 Feb 2023 18:00:00 GMT
     file: /audio/TFIT04.mp3
     duration: 00:00:29
