--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,5 +21,5 @@ jobs:
           git config user.name github-actions
           git config user.email jonathankoziel1@gmail.com
           git add .
-          git commit -m 'feat: ndified feed'
+          git commit -m 'feat: modified feed'
           git push
