--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,20 +6,5 @@ jobs:
     steps:
       - name: Checkout Repo
         uses: actions/checkout@v4
-      - name: Setup Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: "3.10"
-      - name: Install Dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install pyyaml
       - name: Run Feed Generator
-        run: python feed.py
-      - name: Push Repo
-        run: |
-          git config user.name github-actions
-          git config user.email jonathankoziel1@gmail.com
-          git add .
-          git commit -m 'feat: modified feed'
-          git push
+        uses: j-koziel/podcast-generator@main
